# NashEMA-PG

./: .gitignore  README.md  pyproject.toml  run_experiments.sh
agents/: __init__.py  base_agent.py  battleship.py  dark_hex3_agent.py  kuhn_poker.py  leduc_poker.py  liar_dice.py  mixture_agent.py  mlp_agent.py  phantom_tictactoe_agent.py  poker.py  random_agent.py  tictactoe.py  utils.py
agents/blocks/: transformer.py
conf/agent/: battle_ship.yaml  dark_hex3_abrupt.yaml  dark_hex3_classic.yaml  head_up_poker.yaml  kuhn_poker.yaml  leduc_poker.yaml  liar_dice.yaml  phantom_tic_tac_toe_abrupt.yaml  phantom_tic_tac_toe_classic.yaml  tic_tac_toe.yaml
conf/algorithm/: fsp.yaml  mmd.yaml  nash_pg.yaml  psro.yaml
conf/default/: fsp.yaml  mmd.yaml  nash_pg.yaml  psro.yaml
conf/env/: battle_ship.yaml  dark_hex3_abrupt.yaml  dark_hex3_classic.yaml  head_up_poker.yaml  kuhn_poker.yaml  leduc_poker.yaml  liar_dice.yaml  phantom_tic_tac_toe_abrupt.yaml  phantom_tic_tac_toe_classic.yaml  tic_tac_toe.yaml
conf/logging/: both.yaml  json.yaml  tensorboard.yaml
envs/: __init__.py  dark_hex3.py  kuhn_poker.py  leduc_poker.py  liar_dice.py  myspaces.py  mytypes.py  phantom_tictactoe.py  tictactoe.py
envs/battleship/: __init__.py  gameplay.py  setup.py  state.py  utils.py
envs/head_up_poker/: __init__.py  (+1 more)
eval/: compute_exploitability.py
scripts/: __init__.py  analyze_checkpoints.py  compute_elo.py  compute_exploits.py  plot_exploitability.py  run_training.py
train/: loggers.py  mmd.py  mytypes.py  nash_pg.py  psro.py
wrappers/: __init__.py  auto_reset_wrapper.py
(+12 files in other folders)
