[project]
name = "nash-policy-gradient"
version = "1.0.0"
description = "code for the paper: 'Nash Policy Gradient: A Policy Gradient Method with Iteratively Refined Regularization for Finding Nash Equilibria'"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "chex>=0.1.89",
    "distrax>=0.1.5",
    "fastapi>=0.116.1",
    "flax>=0.10.7",
    "hydra-core>=1.3.2",
    "ipykernel>=6.29.5",
    "jax==0.6.0",
    "matplotlib>=3.10.3",
    "optax>=0.2.5",
    "orbax>=0.1.9",
    "pytest>=8.4.1",
    "tensorboard>=2.19.0",
    "torch>=2.0.1",
    "tqdm>=4.67.1",
    "uvicorn==0.24.0",
]

[tool.setuptools.packages.find]
include = ["agents*", "envs*", "train*", "wrappers*", "eval*", "conf*"]
